# environmentinator

./: .gitignore  gen_docs.py  index.html  publish.py  pyproject.toml  readme.md
environmentinator/: __init__.py
examples/: example_01.py  example_02.py
