[build-system]
# Hatch is a modern, extensible Python project manager.
# https://hatch.pypa.io/latest/
# > python -m pip install --target=.py-env hatch
# > PYTHONPATH=$(realpath .py-env)":$PYTHONPATH"
# > python -c '__import__("hatch.cli").cli.main()'
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "environmentinator"
authors = [{name = "Jeffrey McAteer", email = "jeffrey-pydev@jmcateer.com"}]
dynamic = ["version", "description"]

